--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,11 +3,9 @@ main:
   - title: "About Me"
     url: "/#about-me"
 
-  - title: "News"
-    url: "/#-news"
 
-  - title: "Publications"
-    url: "/#-publications"
+  - title: "Papers"
+    url: "/#-papers"
 
   - title: "Honors and Awards"
     url: "/#-honors-and-awards"
@@ -15,8 +13,3 @@ main:
   - title: "Educations"
     url: "/#-educations"
 
-  - title: "Invited Talks"
-    url: "/#-invited-talks"
-
-  - title: "Internships"
-    url: "/#-internships"
